# simple-dnn

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
src/: CMakeLists.txt
src/ops/: conv2d.cc  conv2d.h
test/: CMakeLists.txt
test/ops/: conv2d_unittest.cc
